lab03: delete lab05 from lab03
