# VikingsServer/internal/app/handler/handler.go
@@ -5,11 +5,7 @@ package handler
 import (
 	_ "VikingsServer/docs"
 	"VikingsServer/internal/app/config"
-	"VikingsServer/internal/app/redis"
 	"VikingsServer/internal/app/repository"
-	"VikingsServer/internal/app/role"
-	"errors"
-	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/minio/minio-go"
 	"github.com/sirupsen/logrus"
@@ -20,7 +16,6 @@ import (
 
 const (
 	baseURL         = "api/v3"
-	citiesHTML      = "cities"
 	cities          = baseURL + "/cities"
 	addCityIntoHike = baseURL + "/cities/add-city-into-hike"
 	addCityImage    = baseURL + "/cities/upload-image"
@@ -42,7 +37,6 @@ type Handler struct {
 	Repository *repository.Repository
 	Minio      *minio.Client
 	Config     *config.Config
-	Redis      *redis.Client
 }
 
 func NewHandler(
@@ -50,20 +44,16 @@ func NewHandler(
 	r *repository.Repository,
 	m *minio.Client,
 	conf *config.Config,
-	red *redis.Client,
 ) *Handler {
 	return &Handler{
 		Logger:     l,
 		Repository: r,
 		Minio:      m,
 		Config:     conf,
-		Redis:      red,
 	}
 }
 
 func (h *Handler) RegisterHandler(router *gin.Engine) {
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
 	h.UserCRUD(router)
 	h.CityCRUD(router)
 	h.HikeCRUD(router)
@@ -72,31 +62,25 @@ func (h *Handler) RegisterHandler(router *gin.Engine) {
 
 func (h *Handler) CityCRUD(router *gin.Engine) {
 	router.GET(cities, h.CitiesList)
-	router.POST(cities, h.WithAuthCheck(role.Manager, role.Admin), h.AddCity)
+	router.POST(cities, h.AddCity)
 	router.PUT(addCityImage, h.AddImage)
-	router.PUT(cities, h.WithAuthCheck(role.Manager, role.Admin), h.UpdateCity)
-	router.DELETE(cities, h.WithAuthCheck(role.Manager, role.Admin), h.DeleteCity)
-	//router.POST(addCityIntoHike, h.AddCityIntoHike)
-	router.POST(addCityIntoHike, h.WithAuthCheck(role.Manager, role.Admin), h.AddCityIntoHike)
-	router.GET("/ping", h.WithAuthCheck(role.Manager, role.Admin), h.Ping)
+	router.PUT(cities, h.UpdateCity)
+	router.DELETE(cities, h.DeleteCity)
+	router.POST(addCityIntoHike, h.AddCityIntoHike)
 }
 
 func (h *Handler) HikeCRUD(router *gin.Engine) {
 	//router.POST(hikes, h.AddHike)
 	//router.PUT(hikesUpdateStatus, h.UpdateHikeStatus)
 	router.GET(hikes, h.HikesList)
-	router.DELETE(hikes, h.WithAuthCheck(role.Manager, role.Admin), h.DeleteHike)
-	router.PUT(hikeUpdateStatusForModerator, h.WithAuthCheck(role.Manager, role.Admin), h.UpdateStatusForModerator)
-	router.PUT(hikeUpdateStatusForUser, h.WithAuthCheck(role.Manager, role.Admin), h.UpdateStatusForUser)
-	router.PUT(hikes, h.WithAuthCheck(role.Manager, role.Admin), h.UpdateHike)
+	router.DELETE(hikes, h.DeleteHike)
+	router.PUT(hikeUpdateStatusForModerator, h.UpdateStatusForModerator)
+	router.PUT(hikeUpdateStatusForUser, h.UpdateStatusForUser)
+	router.PUT(hikes, h.UpdateHike)
 }
 
 func (h *Handler) UserCRUD(router *gin.Engine) {
 	//router.GET(users, h.UsersList)
-	router.Use(cors.Default()).DELETE("/api/v3/cities/delete/:id", h.DeleteCityWithParam)
-	router.POST(login, h.Login)
-	router.POST(signup, h.Register)
-	router.GET(logout, h.Logout)
 }
 
 func (h *Handler) DestinationHikesCRUD(router *gin.Engine) {
@@ -107,10 +91,8 @@ func (h *Handler) DestinationHikesCRUD(router *gin.Engine) {
 }
 
 func registerStatic(router *gin.Engine) {
-	//router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	router.LoadHTMLGlob("static/html/*")
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.Static("/static", "./static")
-	router.Static("/css", "./static")
 	router.Static("/img", "./static")
 }
 
@@ -121,6 +103,7 @@ func registerFrontHeaders(ctx *gin.Context) {
 }
 
 // MARK: - Error handler
+
 type errorResp struct {
 	Status      string `json:"status" example:"error"`
 	Description string `json:"description" example:"Описание ошибки"`
@@ -154,19 +137,4 @@ func (h *Handler) successAddHandler(ctx *gin.Context, key string, data interface
 		"status": "success",
 		key:      data,
 	})
-}
-
-// Ping godoc
-// @Summary      Show hello text
-// @Description  very friendly response
-// @Tags         Tests
-// @Security ApiKeyAuth
-// @Produce      json
-// @Router       /ping [get]
-func (h *Handler) Ping(c *gin.Context) {
-	if userID, exists := c.Get("user_id"); exists {
-		c.JSON(http.StatusOK, gin.H{"user_id": userID})
-		return
-	}
-	h.errorHandler(c, http.StatusInternalServerError, errors.New("user_id not found"))
 }
