# VikingsServer/internal/app/handler/middlewares.go
@@ -1,57 +1,0 @@
-package handler
-
-import (
-	"VikingsServer/internal/app/ds"
-	"VikingsServer/internal/app/role"
-	"errors"
-	"github.com/gin-gonic/gin"
-	"github.com/go-redis/redis/v8"
-	"github.com/golang-jwt/jwt"
-	"net/http"
-	"strings"
-)
-
-const jwtPrefix = "Bearer "
-
-func (h *Handler) WithAuthCheck(assignedRoles ...role.Role) func(ctx *gin.Context) {
-	return func(gCtx *gin.Context) {
-		jwtStr := gCtx.GetHeader("Authorization")
-		if !strings.HasPrefix(jwtStr, jwtPrefix) {
-			gCtx.AbortWithStatus(http.StatusForbidden)
-			return
-		}
-
-		jwtStr = jwtStr[len(jwtPrefix):]
-		err := h.Redis.CheckJWTInBlacklist(gCtx.Request.Context(), jwtStr)
-		if err == nil {
-			gCtx.AbortWithStatus(http.StatusForbidden)
-			return
-		}
-		if !errors.Is(err, redis.Nil) {
-			gCtx.AbortWithError(http.StatusInternalServerError, err)
-			return
-		}
-
-		token, err := jwt.ParseWithClaims(jwtStr, &ds.JWTClaims{}, func(token *jwt.Token) (interface{}, error) {
-			return []byte(h.Config.JWT.Token), nil
-		})
-		if err != nil {
-			gCtx.AbortWithStatus(http.StatusForbidden)
-			h.Logger.Error(err)
-			return
-		}
-
-		myClaims := token.Claims.(*ds.JWTClaims)
-
-		for _, oneOfAssignedRole := range assignedRoles {
-			if myClaims.Role == oneOfAssignedRole {
-				gCtx.Set("user_id", myClaims.UserID)
-				gCtx.Next()
-				return
-			}
-		}
-		gCtx.AbortWithStatus(http.StatusForbidden)
-		h.Logger.Infof("role %s is not assigned in %s", myClaims.Role, assignedRoles)
-		return
-	}
-}
